style.css
/* ... */
.glow:before {
  content: '';
  background: linear-gradient(45deg, #d5b032, #C0C0C0, #cd7f32);
  position: absolute;
  top: -2px;
  left:-2px;
  background-size: 400%;
  z-index: -1;
  filter: blur(5px);
  width: calc(100% + 6px);
  height: calc(100% + 6px);
  animation: glowing 20s linear infinite;
  transition: opacity .3s ease-in-out;
  border-radius: 10px;
	opacity: 1;
}
.glow:after {
    z-index: -1;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: #fff;
    left: 0;
    top: 0;
    border-radius: 10px;
}
@keyframes glowing {
    0% { background-position: 0 0; }
    50% { background-position: 400% 0; }
    100% { background-position: 0 0; }
}
.sponsor{
  width: 200px;
  height: 130px;
  border-radius: 5px;
  height: 100%;
  object-fit: contain;
}
.item {
  min-width: 33%;
  height: 130px;
  margin: 30px 0;
  border-radius: 20px;
  padding: 0 30px;
  box-sizing: border-box
}

.description {
	font-size: 20px;
	padding: 16px 3%;
}
.flex{
	display: flex;
}
.names-container > div {
	padding: 2%;
	text-align: center;
  min-width: 360px;
	width: 40%;
  max-width: 100%;
  margin: 0 0 40px;
}
@media only screen and (max-width: 1116px){
  .names-container > div {
    width: 80%;
  }
}
@media only screen and (max-width: 850px){
	.names-container > div {
		width: 50%;
	}
}
@media only screen and (max-width: 500px){
	.names-container > div {
    min-width: unset;
		width: 96%;
	}
}
.names-container{
	max-width: 100vw;
	flex-wrap: wrap;
	justify-content: space-around;
}
h4{
	color: #ccc;
	padding: 0px;
	margin: 0px;
}
.person {
	width: 180px;
  height: 180px;
  object-fit: cover;
  object-position: top;
  border-radius: 32px;
}
.link{
	text-decoration:none;
	color: black;
	transition: all 0.3s ease;
}
.link:hover{
	transform: scale(1.04);
	cursor: pointer;
}
.link > img{
	max-width: 40px;
	max-height: 40px;
  border-radius: 9px;
	transition: all 0.3s ease;
	margin: 0px 4px;
}
.link > img:hover{
	transform: scale(1.1);
	cursor: pointer;
}
.bottom-links{
  margin-left: auto;
}
.bottom-links a {
  display: inline-block;
}
.bottom-links .smallscreen, .smallscreen-divider {
  display: none;
}
@media only screen and (max-width: 600px){
	.bottom-links{
		position: relative;
		left: 50%;
		transform: translateX(-50%);
		padding-top: 10px;
	}
}
.accordion {
  background-color: rgb(34, 36, 38);
  color: #bebebe;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 16px;
  transition: 0.4s;
  box-sizing: border-box;
}

.accordion:hover {
  background-color: rgb(53, 57, 59);
}
.active{
	background-color: rgb(44,47,49);
}

.panel {
  padding: 0px;
  background-color: var(--col-bg-main);
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  width: 100%;
  box-sizing: border-box;
}
.accordion:after {
  content: '+'; /* Unicode character for "plus" sign (+) */
  font-size: 20px;
  color: #bebebe;
  float: right;
  margin-left: 5px;
}
.faq-answer{
  padding: 18px 18px;
  font-size: 16px;
  text-align:left;
  margin: 0px;
  background-color: rgba(255,255,255, 0.06);
}
.faq-answer > a{
	color: #9cf;
}
.active:after {
  content: "\2212"; /* Unicode character for "minus" sign (-) */
}

.image-main {
  width: 100%!important;
  object-fit: cover;
  object-position: 50% 50%;
}
.section-main{
	height: calc(100vh - 70px);
  width: 100vw;
}
.header-text-container {
  position: absolute;
  bottom: calc(5vw - 100px);
  width: 100%;
  transform: translateY(-50%);
  padding: 0 15vw;
  box-sizing: border-box;
}
.header-text-container h2 {
  color: white;
  font-size: clamp(36px, calc(10px + 4vw), 120px);
  text-shadow: 0px 0px 10px #000;
  margin: 0.4em 0;
  scroll-margin: 40vh;
}
.header-text-container p {
  font-size: 24px;
}
.banner-text{
  position:absolute;
  margin:auto;
  z-index: 1;
  color: white;
  font-size: 50px;
  left:50%;
  bottom: 15vw;
  transform: translate(-50%, -50%);
  width: calc(100% - 100px);
  padding: 0px 50px;
  text-shadow: 0px 0px 10px #000;
}
.hide-on-small{
  display:none;
}
.text-over-image{
  text-align: center;
}
@media only screen and (min-width: 800px){
  .text-over-image{
    text-align: left;
    position: absolute;
    top: 100vh;
    color: white;
    width: 100%;
    height: calc(100vh - 100px);
    padding: 30px 0px 0px 30px;
  }
  .polygon{
    clip-path: polygon(0 0, 62% 0, 33% 100%, 0% 100%);
    background-color: rgba(0,0,0,0.5);
  }
  .polygon > h1{
    width: 50%;
  }
  .polygon > p{
    width: 33%;
  }
  .text-over-image2{
    text-align: right;
    position: absolute;
    top: calc(100vh + 100vh - 70px);
    color: white;
    width: 100%;
    height: calc(100vh - 100px);
    padding-right: 30px;
  }
  .polygon2{
    clip-path: polygon(100% 0, 38% 0, 66% 100%, 100% 100%);
    background-color: rgba(0,0,0,0.5);
  }
  .polygon2 > h1{
    width: 50%;
    margin-left:50%;
  }
  .polygon2 > p{
    margin-left:calc(66%);
    width: 33%;
  }
  .hide-on-small{
    display:initial;
  }
}



.flex-row-to-col{
  display: flex;
  flex-direction: row;
  padding: 0px;
}
.flex-row-to-col > li{
  list-style: none;
  width: 33%;
  text-align:center;
}
.flex-row-to-col > li > h3{
  width: 100%;
  text-align:center;
}
.flex-row-to-col > li > p{
  text-align: center;
  padding: 0px 10px;
}
@media only screen and (max-width: 800px){
  .flex-row-to-col{
    display: flex;
    flex-direction: column;
    padding: 0px;
  }
  .flex-row-to-col > li{
    list-style: none;
    width: 100%;
    text-align:center;
  }
}
h3.sponsor-title{
  font-size: 20px;
}
/* Sponsorship Tiers */
#diamond-tier{
  box-shadow: 0px 7px 4px -2px rgba(99,226,255,0.75);
  -webkit-box-shadow: 0px 7px 4px -2px rgba(99,226,255,0.75);
  -moz-box-shadow: 0px 7px 4px -2px rgba(99,226,255,0.75);
  width: calc(285px + 10px);
  margin-top: 50px;
  margin-bottom: 15px;
}
/* ... */

